# cad_pessoa

./: .coverage  .gitignore  Dockerfile  README.md  alembic.ini  database.db  database.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 631c7c30c5b7_create_pessoa_table.py  8b5b4b5fe422_initial_migration.py  create_telefone_table.py
core/: exceptions.py
core/config/: database.py
core/pessoa/: controller.py  models.py  repository.py  router.py  schemas.py  usecases.py
core/telefone/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
routers/: pessoa.py
schemas/: pessoa.py
tests/: conftest.py  test_pessoa.py  utils.py
tests/core/pessoa/: test_controller.py  test_usecases.py
tests/telefone/: test_repository.py  test_router.py  test_service.py
