[tool.poetry]
name = "cad-pessoa"
version = "0.1.0"
description = ""
authors = ["Reinaldo Saraiva <reinaldo.saraiva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi-cli = "^0.0.7"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlmodel = "^0.0.22"
pydantic-settings = "^2.7.1"
pydantic = "^2.10.4"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
